fix(packaging): demo launchers pass -Djobs.backend=duckdb so Home shows run history (R2-08)
serve-demo.bat/.sh omitted the jobs backend, so a demo bundle's Home said
"Run history needs the DuckDB jobs backend" and Recent Runs showed a dash.
The regular serve.* keeps it unset (job reporting stays opt-in there).
ObjectsBackendEditionBootTest now pins the full $demoFlags list.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>